# processor-duckdb

./: .gitignore  Dockerfile  README.md  docker-compose.yml  flake8.cfg  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md
component_config/sample-config/: config.json
data/: config.json
data-temp/in/files/: 1DAHtWJp2qLnOQT4WPfgBFbHe2d2jLL3K5wflX3KMklA_365836957.csv
data-temp/in/tables/: second.csv.manifest
scripts/: build_n_test.sh
src/: component.py  processor.py
tests/: test_component.py  test_functional.py
tests/functional/advanced-in-parquet-out-csv/source/data/: config.json
tests/functional/advanced-json-normalized/source/data/: config.json
tests/functional/advanced-json-simple/source/data/: config.json
tests/functional/advanced-out-table-params/source/data/: config.json
tests/functional/advanced-pattern-default-delimiter/source/data/: config.json
tests/functional/advanced/source/data/: config.json
tests/functional/simple-pattern-default-delimiter/source/data/: config.json
tests/functional/simple-sliced/source/data/: config.json
tests/functional/simple/source/data/: config.json
tests/functional_dtypes/advanced-json-normalized/source/data/: config.json
tests/functional_dtypes/advanced-legacy-manifest/source/data/: config.json
tests/functional_dtypes/advanced-out-table-params/source/data/: config.json
tests/functional_dtypes/advanced-pattern-default-delimiter/source/data/: config.json
(+20 files in other folders)
